# mafex

./: .gitignore  LICENSE  README.md  benchmark.py  config.yaml  demo.py  eacl_benchmark.py  paper_benchmark.py  pyproject.toml  requirements.txt  run_mafex.py
evaluation/: __init__.py  metrics.py  samples.py
mafex/: __init__.py  attribution.py  models.py  morphology.py  projection.py  visualization.py
notebooks/: demo.ipynb
results/: berturk.json  berturk_sentiment.json  cosmos_bert.json  eacl_berturk_full.json  eacl_cosmos_full.json  eacl_kumru_full.json  eacl_sentiment_full.json  eacl_trial.json  kumru.json
