[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mafex"
version = "0.1.0"
description = "Morpheme-Aligned Faithful Explanations for Turkish NLP"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Muhammet Anıl Yağız", email = "213255046@kku.edu.tr"}
]
keywords = [
    "nlp",
    "xai",
    "explainability",
    "turkish",
    "morphology",
    "interpretability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
full = [
    "captum>=0.6.0",
    "shap>=0.42.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/anilyagiz/mafex"
Documentation = "https://github.com/anilyagiz/mafex#readme"
Repository = "https://github.com/anilyagiz/mafex"

[project.scripts]
mafex = "run_mafex:main"

[tool.setuptools]
py-modules = ["run_mafex"]

[tool.setuptools.packages.find]
include = ["mafex*", "evaluation*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
